// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dxf-parser whole-tree snapshots > 'monopitch-1br' layer summary 1`] = `
[
  {
    "blocks": 0,
    "name": "Doors",
    "polylines": 2,
  },
  {
    "blocks": 12,
    "name": "Furniture",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Bath Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Bed Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Living Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Terrace",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Walls",
    "polylines": 16,
  },
  {
    "blocks": 0,
    "name": "Windows",
    "polylines": 7,
  },
]
`;

exports[`dxf-parser whole-tree snapshots > 'monopitch-2br-v3' layer summary 1`] = `
[
  {
    "blocks": 0,
    "name": "Doors",
    "polylines": 3,
  },
  {
    "blocks": 10,
    "name": "Furniture",
    "polylines": 2,
  },
  {
    "blocks": 0,
    "name": "Rooms$Bath Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Bed Room",
    "polylines": 2,
  },
  {
    "blocks": 0,
    "name": "Rooms$Living Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Terrace",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Walls",
    "polylines": 17,
  },
  {
    "blocks": 0,
    "name": "Windows",
    "polylines": 7,
  },
]
`;

exports[`dxf-parser whole-tree snapshots > 'monopitch-3br' layer summary 1`] = `
[
  {
    "blocks": 0,
    "name": "Doors",
    "polylines": 4,
  },
  {
    "blocks": 14,
    "name": "Furniture",
    "polylines": 3,
  },
  {
    "blocks": 0,
    "name": "Rooms$Bath Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Bed Room",
    "polylines": 3,
  },
  {
    "blocks": 0,
    "name": "Rooms$Living Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Terrace",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Walls",
    "polylines": 21,
  },
  {
    "blocks": 0,
    "name": "Windows",
    "polylines": 8,
  },
]
`;

exports[`dxf-parser whole-tree snapshots > 'monopitch-studio-v6' layer summary 1`] = `
[
  {
    "blocks": 0,
    "name": "Doors",
    "polylines": 1,
  },
  {
    "blocks": 10,
    "name": "Furniture",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Bath Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Bed Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Living Room",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Rooms$Terrace",
    "polylines": 1,
  },
  {
    "blocks": 0,
    "name": "Walls",
    "polylines": 14,
  },
  {
    "blocks": 0,
    "name": "Windows",
    "polylines": 5,
  },
]
`;
